Change profession to Backend and include SQL skills
Updated profession from Frontend to Backend and added SQL.

--- a/sobre.html
+++ b/sobre.html
@@ -23,16 +23,17 @@
 
         <section class="about animated">
             <h2>Sobre Mim</h2>
-            <p>Sou <strong>Edgard Rodrigues</strong>, desenvolvedor Frontend apaixonado por tecnologia e design.
+            <p>Sou <strong>Edgard Rodrigues</strong>, desenvolvedor Backend apaixonado por tecnologia e design.
                 Estudo <strong>Análise e Desenvolvimento de Sistemas</strong> na Universidade de Mogi das Cruzes (UMC).
                  Gosto de criar interfaces modernas, responsivas e bem estruturadas.
-                Tenho experiência com <strong>HTML, CSS, JavaScript</strong> e estou sempre aprendendo novas tecnologias.
+                Tenho experiência com <strong>HTML, CSS, JavaScript e Sql,</strong> estou sempre aprendendo novas tecnologias.
             </p>
             <br>
-            <p>Além disso, tenho interesse em UX/UI Design e em transformar ideias em experiências digitais atraentes.
-                Busco constantemente aprimorar minhas habilidades para criar projetos com performance, acessibilidade e estética de alto nível.
+            <p>Além disso, tenho interesse em JavaScript, PHP e Sql
+                quero melhorar minhas habilidades profissionais e me desenvolver na area.
             </p>
         </section>
     </div>
 </body>
 </html>
+
