Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="home" class="home animated">
             <div class="home-detail">
                 <h1>Edgard Rodrigues da Silva</h1>
-                <h2>Frontend Developer</h2>
+                <h2>Backend </h2>
                 <p>Estudante de Análise e Desenvolvimento de Sistemas na 
                     Universidade de Mogi das Cruzes - UMC</p>
 
