Atualizar o sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Mim - Edgard Rodrigues</title>
+    <title>Sobre Mim - Edgard Rodrigues da Silva</title>
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 
         <section class="about animated">
             <h2>Sobre Mim</h2>
-            <p>Sou <strong>Edgard Rodrigues</strong>, desenvolvedor Backend apaixonado por tecnologia e design.
+            <p>Sou <strong>Edgard Rodrigues da Silva</strong>, desenvolvedor Backend apaixonado por tecnologia e design.
                 Estudo <strong>Análise e Desenvolvimento de Sistemas</strong> na Universidade de Mogi das Cruzes (UMC).
                  Gosto de criar interfaces modernas, responsivas e bem estruturadas.
                 Tenho experiência com <strong>HTML, CSS, JavaScript e Sql,</strong> estou sempre aprendendo novas tecnologias.
