--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Edgard Rodrigues</title>
+    <title>Contato - Edgard-Dev</title>
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
@@ -22,9 +22,9 @@
 
         <section class="contact animated">
             <h2>Entre em Contato</h2>
-            <p>Preencha o formulário abaixo ou envie um e-mail diretamente para <strong>seuemail@gmail.com</strong>.</p>
+            <p>Preencha o formulário abaixo ou envie um e-mail diretamente para <strong>edgardrodriguessilva3@gmail.com</strong>.</p>
 
-            <form action="https://formsubmit.co/seuemail@gmail.com" method="POST">
+            <form action="https://formsubmit.co/edgardrodriguessilva3@gmail.com" method="POST">
                 <input type="text" name="name" placeholder="Seu nome" required>
                 <input type="email" name="email" placeholder="Seu e-mail" required>
                 <textarea name="message" rows="5" placeholder="Sua mensagem" required></textarea>
