--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <h2>Entre em Contato</h2>
 
-    <form action="https://formsubmit.co/SEU-EMAIL-AQUI@gmail.com" method="POST">
+    <form action="https://formsubmit.co/edgardrodriguessilva3@gmail.com" method="POST">
 
         <!-- Anti-spam e configurações -->
         <input type="hidden" name="_captcha" value="false">
