--- a/sobre.html
+++ b/sobre.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container animated">
+
         <header class="animated">
             <a href="index.html" class="logo">Portfolio</a>
+
             <nav class="navbar">
                 <a href="index.html">Home</a>
                 <a href="sobre.html" class="active">Sobre</a>
@@ -23,16 +25,30 @@
 
         <section class="about animated">
             <h2>Sobre Mim</h2>
-            <p>Sou <strong>Edgard Rodrigues da Silva</strong>, desenvolvedor Backend apaixonado por tecnologia e design.
-                Estudo <strong>Análise e Desenvolvimento de Sistemas</strong> na Universidade de Mogi das Cruzes (UMC).
-                 Gosto de criar interfaces modernas, responsivas e bem estruturadas.
-                Tenho experiência com <strong>HTML, CSS, JavaScript e Sql,</strong> estou sempre aprendendo novas tecnologias.
+
+            <p>
+                Sou <strong>Edgard Rodrigues da Silva</strong>, desenvolvedor Backend apaixonado por tecnologia,
+                design e criação de interfaces modernas. Estudo 
+                <strong>Análise e Desenvolvimento de Sistemas</strong> na Universidade de Mogi das Cruzes (UMC),
+                onde venho construindo uma base sólida em desenvolvimento e boas práticas.
             </p>
+
             <br>
-            <p>Além disso, tenho interesse em JavaScript, PHP e Sql
-                quero melhorar minhas habilidades profissionais e me desenvolver na area.
+
+            <p>
+                Tenho experiência com <strong>HTML, CSS, JavaScript, PHP e SQL</strong>.
+                Sempre busco evoluir minhas habilidades e aprender novas tecnologias.
+                Tenho interesse especial por desenvolvimento Backend, APIs, bancos de dados e soluções eficientes.
+            </p>
+
+            <br>
+
+            <p>
+                Meu objetivo é melhorar cada vez mais e construir projetos profissionais, estruturados
+                e funcionais, sempre focando em qualidade e evolução constante.
             </p>
         </section>
+
     </div>
 </body>
 </html>
