--- a/contato.html
+++ b/contato.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Portfólio</title>
+
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<div class="container">
+<div class="container"> <!-- ✨ Container começa aqui -->
 
     <header>
         <a href="#" class="logo">Edgard</a>
@@ -23,7 +24,8 @@
         </nav>
     </header>
 
-    <section class="contact animated" style="padding-top:120px;">
+    <!-- SEÇÃO DE CONTATO DENTRO DO CONTAINER -->
+    <section class="contact animated" style="padding-top:140px; padding-bottom:80px;">
 
         <h2>Entre em Contato</h2>
 
@@ -36,25 +38,18 @@
             backdrop-filter: blur(10px);
             font-size: 17px;
         ">
-            Preencha o formulário abaixo ou fale comigo através das redes sociais.
-            Retornarei o mais rápido possível!
+            Preencha o formulário abaixo ou fale comigo pelas redes sociais.
         </p>
 
         <form action="#" method="post">
-
             <input type="text" name="nome" placeholder="Seu nome" required>
-
             <input type="email" name="email" placeholder="Seu e-mail" required>
-
             <textarea name="mensagem" rows="5" placeholder="Escreva sua mensagem" required></textarea>
 
-            <button class="btn" type="submit">Enviar Mensagem</button>
-
+            <button class="btn" type="submit">Enviar</button>
         </form>
 
-        <br><br>
-
-        <div class="social-icons">
+        <div class="social-icons" style="margin-top: 40px;">
             <a href="#"><i class="ri-instagram-line"></i></a>
             <a href="#"><i class="ri-linkedin-fill"></i></a>
             <a href="#"><i class="ri-github-fill"></i></a>
@@ -62,7 +57,8 @@
 
     </section>
 
-</div>
+</div> <!-- ✨ Container fecha aqui -->
 
 </body>
 </html>
+
