Refactor contato.html structure and styles
Updated the contact section layout and styling.

--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta-name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Portfólio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet"/>
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="container"> <!-- ✨ Container começa aqui -->
+<div class="container">
 
     <header>
         <a href="#" class="logo">Edgard</a>
@@ -24,28 +24,19 @@
         </nav>
     </header>
 
-    <!-- SEÇÃO DE CONTATO DENTRO DO CONTAINER -->
-    <section class="contact animated" style="padding-top:140px; padding-bottom:80px;">
+    <!-- 🔵 SEÇÃO DE CONTATO -->
+    <section class="home animated" style="padding-top: 140px; text-align: center;">
 
-        <h2>Entre em Contato</h2>
+        <h1 class="title">Entre em Contato</h1>
 
-        <p style="
-            max-width: 600px;
-            margin: 0 auto 40px;
-            background: rgba(255,255,255,.1);
-            padding: 20px;
-            border-radius: 20px;
-            backdrop-filter: blur(10px);
-            font-size: 17px;
-        ">
+        <p class="description" style="max-width: 600px; margin: 20px auto;">
             Preencha o formulário abaixo ou fale comigo pelas redes sociais.
         </p>
 
-        <form action="#" method="post">
+        <form class="contact-form">
             <input type="text" name="nome" placeholder="Seu nome" required>
             <input type="email" name="email" placeholder="Seu e-mail" required>
             <textarea name="mensagem" rows="5" placeholder="Escreva sua mensagem" required></textarea>
-
             <button class="btn" type="submit">Enviar</button>
         </form>
 
@@ -57,7 +48,7 @@
 
     </section>
 
-</div> <!-- ✨ Container fecha aqui -->
+</div>
 
 </body>
 </html>
