--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta-name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Portfólio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet"/>
@@ -24,15 +24,14 @@
         </nav>
     </header>
 
-    <!-- 🔵 SEÇÃO DE CONTATO -->
-    <section class="home animated" style="padding-top: 140px; text-align: center;">
+    <section class="about animated" style="padding-top:150px;">
+        <h2>Entre em Contato</h2>
 
-        <h1 class="title">Entre em Contato</h1>
-
-        <p class="description" style="max-width: 600px; margin: 20px auto;">
+        <p>
             Preencha o formulário abaixo ou fale comigo pelas redes sociais.
         </p>
 
+        <!-- FORM COM A CLASSE CORRETA -->
         <form class="contact-form">
             <input type="text" name="nome" placeholder="Seu nome" required>
             <input type="email" name="email" placeholder="Seu e-mail" required>
@@ -40,7 +39,7 @@
             <button class="btn" type="submit">Enviar</button>
         </form>
 
-        <div class="social-icons" style="margin-top: 40px;">
+        <div class="social-icons">
             <a href="#"><i class="ri-instagram-line"></i></a>
             <a href="#"><i class="ri-linkedin-fill"></i></a>
             <a href="#"><i class="ri-github-fill"></i></a>
@@ -52,4 +51,3 @@
 
 </body>
 </html>
-
