Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="home-detail">
                 <h1>Edgard Rodrigues da Silva</h1>
                 <h2>Backend </h2>
-                <p>Estudante de Análise e Desenvolvimento de Sistemas na 
-                    Universidade de Mogi das Cruzes - UMC</p>
+                <p>Estudante de Análise e Desenvolvimento de Sistemas na - UMC 
+                    'Universidade de Mogi das Cruzes'</p>
 
                 <div class="download-social">
                     <a href="Curriculo .docx" class="btn" download>Download CV</a>
@@ -59,7 +59,6 @@
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_next" value="https://seusite.com/obrigado.html">
 
-        <!-- Campos do formulário -->
         <input type="text" name="name" placeholder="Seu nome" required>
 
         <input type="email" name="email" placeholder="Seu e-mail" required>
